--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/pascal-compiler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11a.jar=/Users/jorgecaballero/Documents/Unitec/Compi/jflex-1.6.1/lib/java-cup-11a.jar
+file.reference.jflex-1.6.1.jar=/Users/jorgecaballero/Documents/Unitec/Compi/jflex-1.6.1/lib/jflex-1.6.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-cup-11a.jar}:\
+    ${file.reference.jflex-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
